--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -1,32 +1,38 @@
   body {
-   padding-left: 11em;
+
    font-family: Georgia, "Times New Roman",
           Times, serif;
-		  color: purple;
-    background-color: #d8da3d }
-	 ul.navbar {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-	position: absolute;
-    top: 2em;
-    left: 1em;
-    width: 10em }
+		  color: rgb(0, 0, 0);
+    background-color: #cbd2d3 }
+
 	h1 {
     font-family: Helvetica, Geneva, Arial,
           SunSans-Regular, sans-serif }
-		ul.navbar li {
-    background: white;
-    margin: 0.5em 0;
-    padding: 0.3em;
-    border-right: 1em solid black }
-  ul.navbar a {
-    text-decoration: none }
   a:link {
     color: blue }
-  a:visited {
-    color: purple }
 	address {
     margin-top: 1em;
     padding-top: 1em;
-    border-top: thin dotted }
+    border-top: thin dotted}
+
+    nav a {
+      color: rgb(226, 211, 211);
+      font-family: Calibri;
+      font-size: 17pt;
+      text-decoration: none;
+      margin-right: 20px;
+      font-weight: bold;
+    }
+    
+    nav a:hover {
+      text-decoration: underline;
+      color: rgb(226, 226, 226);
+      
+    }
+
+    .navbar-container {
+      background-color: rgb(31, 0, 88); /* Set the background color of the box */
+      padding: 10px; /* Adjust the padding to create space between the box and the navbar */
+      width: 99%; /* Make the box width fit its content */
+      margin: 0 auto; /* Center the box horizontally */
+    }
