--- a/styles/minimal-table.css
+++ b/styles/minimal-table.css
@@ -65,3 +65,41 @@ caption {
   padding: 10px;
 }
   
+
+body {
+
+  font-family: Georgia, "Times New Roman",
+         Times, serif;
+     color: rgb(0, 0, 0);
+   background-color: #cbd2d3 }
+
+ h1 {
+   font-family: Helvetica, Geneva, Arial,
+         SunSans-Regular, sans-serif }
+
+ address {
+   margin-top: 1em;
+   padding-top: 1em;
+   border-top: thin dotted}
+
+   nav a {
+     color: rgb(226, 211, 211);
+     font-family: Calibri;
+     font-size: 17pt;
+     text-decoration: none;
+     margin-right: 20px;
+     font-weight: bold;
+   }
+   
+   nav a:hover {
+     text-decoration: underline;
+     color: rgb(226, 226, 226);
+     
+   }
+
+   .navbar-container {
+     background-color: rgb(31, 0, 88); 
+     padding: 10px; 
+     width: 99%; 
+     margin: 0 auto; 
+   }
