Implemented Content on topic and risks

--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -3,7 +3,8 @@
    font-family: Georgia, "Times New Roman",
           Times, serif;
 		  color: rgb(0, 0, 0);
-    background-color: #adb6b8 }
+      font-size: 13pt;
+    background-color: #cfd9db }
 
 	h1 {
     font-family: Helvetica, Geneva, Arial,
