--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -2,9 +2,11 @@
 
    font-family: Georgia, "Times New Roman",
           Times, serif;
-		  color: rgb(0, 0, 0);
+		  color: rgb(233, 233, 233);
       font-size: 13pt;
-    background-color: #cfd9db }
+    background-color: #000000 
+
+  }
 
 	h1 {
     font-family: Helvetica, Geneva, Arial,
@@ -16,7 +18,7 @@
     border-top: thin dotted}
 
     nav a {
-      color: rgb(226, 211, 211);
+      color: rgb(0, 0, 0);
       font-family: Calibri;
       font-size: 17pt;
       text-decoration: none;
@@ -26,13 +28,24 @@
     
     nav a:hover {
       text-decoration: underline;
-      color: rgb(226, 226, 226);
+      color: rgb(58, 58, 58);
       
     }
 
     .navbar-container {
-      background-color: rgb(31, 0, 88); 
+      background-color: rgb(13, 196, 13); 
       padding: 10px; 
-      width: 99%; 
+      width: 98%; 
       margin: 0 auto; 
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+  
+    .container {
+      background : linear-gradient(180deg, #282733, #202020 25%);
+      margin: 0 auto;
+      width: 98%;
+      padding: 10px;
+      border-radius: 10px;    
+      
     }
