--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -48,12 +48,15 @@
 
     p {
       padding-left: 20px;
+      padding-right: 20px;
     }
 
     h1 {
       padding-left: 10px;
+      padding-right: 10px;
     }
 
     h2 {
       padding-left: 10px;
+      padding-right: 10px;
     }
