--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -6,8 +6,14 @@
 
   }
 
+  a {
+    color: white;
+  }
 
-
+  a:hover {
+    color: rgb(13, 196, 13);
+  
+  }
 	address {
     margin-top: 1em;
     padding-top: 1em;
@@ -37,7 +43,7 @@
     }
   
     .container {
-      background : linear-gradient(180deg, #282733, #202020 25%);
+      background : linear-gradient(180deg, #383647, #2c2c2c 25%);
       margin: 0 auto;
       width: 98%;
       padding: 10px;
@@ -60,3 +66,43 @@
       padding-left: 10px;
       padding-right: 10px;
     }
+
+    table {
+      border-collapse: collapse;
+      border: 2px solid rgb(13, 196, 13);
+      letter-spacing: 1px;
+      font-size: 0.8rem;
+    }
+    
+    td, th {
+      border: 1px solid rgb(0, 0, 0);
+      padding: 10px 20px;
+    }
+    
+    th {
+      background-color: #202020;
+    }
+    
+    td {
+      text-align: center;
+    }
+    
+    tr:nth-child(even) td {
+      background-color: #282733;
+    }
+    
+    tr:nth-child(odd) td {
+      background-color: #282733;
+    }
+  
+    hr {
+        border: none;
+        border-top: 2px solid rgb(13, 196, 13);
+        margin: 10px 0;
+    }
+
+
+    caption {
+      padding: 10px;
+    }
+    
