--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -11,7 +11,7 @@
   }
 
   a:hover {
-    color: rgb(13, 196, 13);
+    color: #1ed760;
   
   }
 	address {
@@ -29,12 +29,12 @@
     
     nav a:hover {
       text-decoration: underline;
-      color: #3d3969;
+      color: #4d4885;
       
     }
 
     .navbar-container {
-      background-color: rgb(13, 196, 13); 
+      background-color: #1ed760; 
       padding: 10px; 
       width: 98%; 
       margin: 0 auto; 
@@ -66,10 +66,14 @@
       padding-left: 10px;
       padding-right: 10px;
     }
+    h4 {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
 
     table {
       border-collapse: collapse;
-      border: 2px solid rgb(13, 196, 13);
+      border: 2px solid #1ed760;
       letter-spacing: 1px;
       font-size: 0.8rem;
     }
@@ -97,7 +101,7 @@
   
     hr {
         border: none;
-        border-top: 2px solid rgb(13, 196, 13);
+        border-top: 2px solid #1ed760;
         margin: 10px 0;
     }
 
